welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:9: error: ';' expected but 'if' found.
		}if ( Math.abs(a-b)%10 > 1){
                 ^